[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bond-intelligence"
version = "0.1.0"
description = "End-to-end pipeline for collecting, parsing, and querying SEC EDGAR bond filings"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/bond_intelligence --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src/bond_intelligence"]
omit = ["tests/*"]
